Version 0.42 - 22 January 2008

- XFdrake:
  o sort monitors in text mode so that "Generic|..." monitors do not appear 
    in the middle of "Vendor|..." monitors
- use SendCoreEvents instead of AlwaysCore for wacoms
- mousedrake:
  o use udev in $PATH instead of /lib/udev/usb_id
    (need latest udev pkg)

Version 0.41 - 14 December 2007, by Olivier "blino" Blin

- mousedrake:
  o use SendCoreEvents instead of AlwaysCore for Synaptics touchpads (#36140)

Version 0.40 - 10 December 2007, by Pascal "Pixel" Rigaux

- XFdrake:
  o never write a ModeLine when using fglrx driver (#30934)

Version 0.39 - 30 November 2007, by Anssi Hannula

- keyboarddrake:
  o use kr(kr104) for the korean keyboard, and don't prompt for a toggle key
    since korean use input method instead
- use /dev/input/by-id/xxx device instead of vendor+product for evdev mice
  (vendor+product support is dropped in x11-driver-input-evdev-1.2.0)
- fix device /dev/input/by-id/usb-$ID_SERIAL-event-mouse for wacoms
  when the ID_SERIAL contains special chars

Version 0.38 - 1 November 2007, by Anssi Hannula

- display message "This setting will be activated after the installation." 
  only during installation (Pixel)
- handle fglrx_dri.so handled by alternatives

Version 0.37 - 4 October 2007, by Pascal "Pixel" Rigaux

- if we probe a monitor EISA_ID but we don't have corresponding
  HorizSync/VertRefresh, we must not use the monitor info
- when checking dkms module packages, check that modules are either
  available in urpmi media, or already installed (fix detection in live)

Version 0.36 - 4 October 2007, by Pascal "Pixel" Rigaux

- better fix for typo in 0.32: don't wrongly default to "automatic" resolution
  when creating xorg.conf (in non --auto) (#34453)

Version 0.35 - 3 October 2007, by Thierry Vignaud

- updated translation

Version 0.34 - 28 September 2007, by Thierry Vignaud

- updated translation

Version 0.33 - 28 September 2007, by Olivier "blino" Blin
